<resources>
    <string name="app_name">Turtle</string>
    <string name="title_activity_bluetooth">BluetoothActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="input_dialog_change_parameter">Change parameter</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_controller">ControllerActivity</string>
    <string name="input_dialog_hint">Enter time</string>
    <string-array name="list">
        <item>Item 1</item>
        <item>Item 2</item>
        <item>Item 3</item>
        <item>Item 4</item>
        <item>Item 5</item>
        <item>Item 6</item>
        <item>Item 7</item>
        <item>Item 8</item>
        <item>Item 9</item>
        <item>Item 10</item>
        <item>Item 11</item>

    </string-array>
    <string-array name="controller_spinner_controller">
        <item name="controller_joystick">Controller: Joystick</item>
        <item name="controller_arrow_buttons">Controller: Buttons</item>
    </string-array>
    <string name="connection_failed">Connection failed</string>
    <string name="title_already_exists">Title already exists</string>
    <string name="please_choose_a_unique_title">Please choose a unique title</string>
    <string name="okay">Okay</string>
    <string name="name_or_command_field_is_empty">Name or command field is empty</string>
    <string name="name_or_command_field_is_empty_warning">Please make sure that neither name or command field is empty or only containing spaces!</string>
    <string name="name_already_exists">Name already exists</string>
    <string name="please_choose_a_unique_name">Please choose a unique name</string>
    <string name="confirm_delete">Confirm delete</string>
    <string name="confirm_delete_custom_command_warning">Are you sure you want to delete this custom command?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="save_project_when_empty">This is an unsaved empty project. No need to save until changes has been made</string>
    <string name="do_you_want_to_delete_this_project">Do you want to delete this project?</string>
    <string name="all_progress_for_this_project_will_be_lost">All progress for this project will be lost.</string>
    <string name="project_not_deleted">Project not deleted</string>
    <string name="project_deleted">Project deleted</string>
    <string name="enter_project_name">Enter project name</string>
    <string name="enter_project_name_warning">Please enter a project name. If you don\'t want to overwrite, please enter a unique name</string>
    <string name="project_not_saved">Project not saved</string>
    <string name="name_can_not_be_blank">Name can not be blank</string>
    <string name="name_can_not_be_blank_warning">Please enter a name that is not blank or only containing spaces!</string>
    <string name="project_saved">Project saved</string>
    <string name="project_name_already_exists">Project name already exists</string>
    <string name="do_you_want_to_override_the_existing_save_file">Do you want to override the existing save file?</string>
    <string name="overwriting">Overwriting</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="save_before_opening_new_project">Do you want to save this project before opening a new project?</string>
    <string name="dont_save_progress_loss_warning">If you don\'t save, all progress in the current project will be lost</string>
    <string name="cancel_clicked">Cancel clicked</string>
    <string name="did_not_override_save_file">Did not override save file</string>
    <string name="overwrite_save_file">Overwrite save file</string>
    <string name="change_parameter">Change parameter</string>
    <string name="project_has_run_through_completely">Project has run through completely!</string>
    <string name="clicked_on">Clicked on</string>
    <string name="please_enter_project_name">Please enter project name</string>
    <string name="please_wait_still_scanning">Please wait, still scanning…</string>
    <string name="connecting_to">Connecting to</string>
    <string name="no_paired_device_warning">There are no paired devices on this device</string>
    <string name="bluetooth_is_enabled">Bluetooth is enabled</string>
    <string name="bluetooth_is_not_enabled_warning">Bluetooth is not enabled, please try again</string>
    <string name="no_devices_found">No devices found</string>
    <string name="trying_to_bond_to_device">Trying to bond to device</string>
    <string name="connected_to">Connected to</string>
    <string name="disconnection_requested">Disconnection requested</string>
    <string name="disconnected">Disconnected</string>
    <string name="not_connected_to_bt_device_warning">You are not connected to a bluetooth device</string>
    <string name="name">Name</string>
    <string name="enable_parameter">Enable parameter</string>
    <string name="command">Command</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="create">Create</string>
    <string name="saved_projects">Saved projects</string>
    <string name="create_new_project">Create new project</string>
    <string name="your_paired_device">Your paired devices</string>
    <string name="scanned_devices">Scanned devices</string>
    <string name="refresh">Refresh</string>
    <string name="avoidance">Avoidance</string>
    <string name="stop">Stop</string>
    <string name="line_follow">Line follow</string>
    <string name="gear_up">Gear up</string>
    <string name="gear_down">Gear down</string>
    <string name="clear_list">Clear list</string>
    <string name="enter_text">Enter text</string>
    <string name="turtle">TURTLE</string>
    <string name="bluetooth_connect">Bluetooth Connect</string>
    <string name="programming">Programming</string>
    <string name="remote_controller">Remote Controller</string>
    <string name="manage_custom_commands">Manage Custom Commands</string>
    <string name="changing_activity_while_traversinglist">You are still running your program</string>
    <string name="change_activity_or_stay_traverselist">Do you wish to stop the running project and change view or stay with the current project?</string>
    <string name="stay">Stay</string>
    <string name="change_view">Change view</string>
    <string name="controller_activity">ControllerActivity</string>
    <string name="select_bluetooth_device_activity">SelectBluetoothDeviceActivity</string>
    <string name="programming_activity">ProgrammingActivity</string>
    <string name="manage_custom_drag_drop_blocks_activity">ManageCustomDragDropBlockActivity</string>
    <string name="project_is_empty">Your current project is empty!</string>
    <string name="bluetooth_client_not_active">Bluetooth client is not active</string>
    <string name="new_project">New project</string>
    <string name="spinner_image">spinnerImage</string>
    <string name="empty_project_delete_button_toast">Project is empty, nothing to delete</string>
    <string name="drive_spinner_title">Driving</string>
    <string name="drive_spinner_gear_down">Gear down</string>
    <string name="drive_spinner_gear_up">Gear up</string>
    <string name="drive_spinner_stop">Stop</string>
    <string name="drive_spinner_turn_left">Turn left</string>
    <string name="drive_spinner_turn_right">Turn right</string>
    <string name="drive_spinner_reverse">Reverse</string>
    <string name="drive_spinner_forward">Drive forward</string>
    <string name="module_spinner_title">Modules</string>
    <string name="module_spinner_led_on">LED turn on</string>
    <string name="module_spinner_led_off">LED turn off</string>
    <string name="module_spinner_buzzer">Buzzer buzz</string>
    <string name="drag_dots_image_description">Drag here symbol</string>
    <string name="direction_image_description">Direction symbol</string>
    <string name="programming_delete_selected_btn_description">Delete selected button</string>
    <string name="programming_save_btn_description">Save button</string>
    <string name="programming_load_btn_description">Load button</string>
    <string name="programming_play_or_pause_btn_description">Play and pause button</string>
    <string name="programming_reset_btn_description">Reset button</string>
    <string name="programming_delete_btn_description">Delete project button</string>
    <string name="hamburger_menu_description">Menu button</string>
    <string name="command_semicolon">Command:</string>
    <string name="name_semicolon">Name:</string>
    <string name="manage_custom_command_image_description">Custom block image</string>
    <string name="leaving_unsaved_project">Leaving unsaved project</string>
    <string name="leaving_unsaved_project_warning">Do you really want to leave this unsaved project? All progress will be lost if you continue!</string>
    <string name="now_running">Now running</string>
    <string name="paused">Paused</string>
    <string name="welcome_to_turtle">Welcome to Turtle!</string>
    <string name="turtle_intro_1">Turtle is an app for you who want to be able to controll your robot in a user friendly way with alot of built in functionalities that makes it easy and fun to use!</string>
    <string name="turtle_intro_bluetooth_connect">In this view, you will be able to scan your surrounding bluetooth devices and connect to your robot of choice which will be connected throughout Turtle.</string>
    <string name="turtle_intro_4">Do you wish to continue the tutorial or skip it and get directly into Turtle?</string>
    <string name="skip">Skip</string>
    <string name="turtle_intro_programming">In this view you can create your own pre-programmed projects with easy to use Drag-And-Drop-Blocks to make reusable runs that your robot can execute.</string>
    <string name="turtle_intro_remote_controller">In this view you can control your robot by using arrow buttons to drive it, pre-programmed buttons to automaticly make the robot do ceratin algorithms or use a joytstick which are all easy to use.</string>
    <string name="this_is_what_you_can_do_in">This is what you can do in</string>
    <string name="turtle_intro_manage_custom_commands">In this view you can create and store your own commands which you may want to send to the robot from the programming view. You can through this functionality send commands that are not pre-progammed in Turtle if you have added new functionalites in your robots code that you want to execute.</string>
    <string name="lets_get_going">Lets get going!</string>
    <string name="up">Up</string>
    <string name="down">Down</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="arrow_up">Arrow up</string>
    <string name="arrow_left">Arrow left</string>
    <string name="arrow_down">Arrow down</string>
    <string name="arrow_right">Arrow right</string>
    <string name="debug_window">Debug Window</string>
    <string name="list_is_already_empty">List is already empty</string>
    <string name="list_cleared">List cleared</string>
</resources>