<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayoutBT"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SelectBluetoothDeviceActivity">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical"
        android:weightSum="2">

        <include
            android:id="@+id/topBar"
            layout="@layout/top_bar"/>
        <!-- IF we would like to see currently connected device but problem
         is that we cant get info about that from the API, only intent-changes,
         so we cant get that info on startup.

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="20dp"
            android:weightSum="2">

            <TextView
                android:id="@+id/textViewTitleConnection"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/PrimaryDark"
                android:text="Current connected device:"/>

            <TextView
                android:id="@+id/textViewCurrentConnectedDevice"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/PrimaryDark"
                android:text="placeholder"/>

        </LinearLayout>
        -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewPairedDevices"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/your_paired_device"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/topBar" />

            <ListView
                android:id="@+id/selectPairedDeviceList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/list"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewPairedDevices" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewScannedDevices"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/scanned_devices"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/selectPairedDeviceList" />

            <ListView
                android:id="@+id/selectScannedDeviceList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/list"
                app:layout_constraintBottom_toTopOf="@id/refreshBluetoothDevicesButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewScannedDevices">
            </ListView>

        </LinearLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <Button
                android:id="@+id/refreshBluetoothDevicesButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/refresh"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_gravity="center"/>

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>


        </androidx.constraintlayout.widget.ConstraintLayout>


    </LinearLayout>

    <include layout="@layout/drawer_layout" />

</androidx.constraintlayout.widget.ConstraintLayout>










